# math3d

./: .gitignore  CMakeLists.txt  README.md
src/: mat4.h  math3d.cpp  math3d.h  math3d_test.cpp  perlin_noise.h  test_vec2.cpp  vec2.h  vec3.h  vec4.h
